--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -4,6 +4,7 @@
   .form-control {
     background-color: transparent;
     margin: 0 8px;
+    color: $white;
   }
   .input-group-text {
     padding: 0 1.5rem;
@@ -22,14 +23,46 @@
       }
     }
   }
+
+
+  .message p {
+    background-color: transparent;
+    margin: 0 8px;
+    color: $white;
+
+    &.error {
+      color: red;
+    }
+
+    &.warning {
+      color: yellow;
+    }  
+
+    &.shakeit
+    {
+      animation: shake 0.2s ease-in-out .1s 2;
+    }
+
+}
+
+@keyframes shake {
+  0% { margin-left: 0rem; }
+  25% { margin-left: 0.25rem; }
+  75% { margin-left: -0.25rem; }
+  100% { margin-left: 0rem; }
+}
+
+
+
+
   ::-webkit-input-placeholder {
-    color: rgba($dark, .7);
+    color: rgba($white, .7);
   }
   :-ms-input-placeholder {
-    color: rgba($dark, .7);
+    color: rgba($white, .7);
   }
   ::placeholder {
-    color: rgba($dark, .7);
+    color: rgba($white, .7);
   }
   button.input-group-text {
     color: $dark;
