--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -31,17 +31,18 @@ h6, .h6 {
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   line-height: 1.4;
   font-family: $font-primary;
-  color: $dark;
+  color: $white;
+  letter-spacing: 0.025em;
 }
 a:focus,
 .button:focus {
  outline: 0;
 }
 a {
-  color: $black;
+  color: $white;
   transition: all .3s;
   text-decoration: none;
   &:hover {
-     color: $black;
+     color: $color-primary;
   }
 }
