--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -61,6 +61,25 @@ ul, ol {
   }
 }
 
+// Flop Calc
+.flop-calc-link button {
+  color: $gray;
+  display: inline-block;
+  text-decoration: none;
+  padding: bottom 1.5px;
+  background-image: linear-gradient($dark 0 0);
+  background-position: 0 100%; /*OR bottom left*/
+  background-size: 0% 2px;
+  background-repeat: no-repeat;
+  transition:
+    background-size 0.3s,
+    background-position 0s 0.3s; /*change after the size immediately*/
+	&:hover {
+    color: $dark;
+    background-position: 100% 100%; /*OR bottom right*/
+    background-size: 100% 2px;
+  }
+}
 
 // button style
 .btn {
