--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -34,22 +34,38 @@
       color: red;
     }
 
-    &.warning {
-      color: yellow;
+    &.success {
+      color: green;
     }  
 
     &.shakeit
     {
       animation: shake 0.2s ease-in-out .1s 2;
+      -webkit-animation: shake 0.2s ease-in-out .1s 2;
     }
 
 }
 
+.shakeValidation
+  {
+    animation: shake 0.2s ease-in-out .1s 2;
+    -webkit-animation: shake 0.2s ease-in-out .1s 2;
+  }
+
+
 @keyframes shake {
-  0% { margin-left: 0rem; }
-  25% { margin-left: 0.25rem; }
-  75% { margin-left: -0.25rem; }
-  100% { margin-left: 0rem; }
+  0% {
+    -webkit-transform: translate(4px, 0);
+    transform: translate(4px, 0);
+  }
+  50% {
+    -webkit-transform: translate(-4px, 0);
+    transform: translate(-4px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
 }
 
 
