--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -23,11 +23,12 @@ ul, ol {
   list-style-position: inside;
 }
 ::selection {
-  color: $white;
+  color: $dark;
   background-color: darken($color-primary, 5);
   text-shadow: none;
 }
-:focus {
+
+.form-control:focus {
   outline: 0;
 }
 
@@ -354,7 +355,7 @@ ul, ol {
       transition: 0.3s ease;
     }
     &:hover {
-      color: rgba($black, .65);
+      color: rgba($color-primary, .65);
       img {
         transform: scale(1.02);
       }
@@ -606,7 +607,7 @@ ul, ol {
   }
   &:focus {
     box-shadow: none;
-    color: $white;
+    color: $dark;
     border-color: $color-primary;
     ~.input-group-append {
       .input-group-text {
