--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -46,11 +46,13 @@
 
 }
 
-.shakeValidation
+.hand div
   {
+    &.shakeValidation {
     animation: shake 0.2s ease-in-out .1s 2;
     -webkit-animation: shake 0.2s ease-in-out .1s 2;
   }
+}
 
 
 @keyframes shake {
