--- a/styles/main.scss
+++ b/styles/main.scss
@@ -257,7 +257,7 @@
   .form-control {
     margin-right: 12px;
     @include mobile {
-      margin-right: 0;
+      margin: 0 12px 10px 0 !important;
     }
   }
   .input-group-text {
