--- a/styles/bootstrap.scss
+++ b/styles/bootstrap.scss
@@ -6,7 +6,7 @@
  */
 
  /* ========================== 
-  Custom Bootstrap Setting for Qurno Nextjs Template 
+  Custom Bootstrap Setting for PokerLighthouse Nextjs Template 
   ============================ */
 
 // Configuration
