--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -34,14 +34,14 @@ ul, ol {
 
 // default styles
 .section {
-  padding: 120px 0;
+  padding: 100px 0 60px;
   @include tablet {
-    padding: 100px 0;
+    padding: 100px 0 50px;
   }
   &-sm {
     padding: 90px 0;
     @include tablet {
-      padding: 80px 0;
+      padding: 80px 0 40px;
     }
   }
 }
@@ -60,6 +60,44 @@ ul, ol {
       background-size: 180px;
     }
   }
+}
+
+// Newsletter
+
+.rotated {
+  transform: rotate(5deg); /* Equal to rotateZ(45deg) */
+}
+
+.freebie {
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translateY(-75%) translateX(-50%);
+  z-index: 1;
+}
+
+
+.newsletter-bg-primary {
+  background-color: rgba($color-primary, 1);
+  padding: 15px;;
+  margin-bottom: 0;
+  border-radius: 4px 4px 0 0;
+ // background-image: url('/images/Bee-pattern.png');
+  background-position: 50% 0;
+  background-size: cover;
+}
+
+.newsletter-bg-primary h2 {
+
+-webkit-text-stroke: 1px $dark;
+}
+
+.newsletter-bg-black {
+  background-color: rgba($black, 1);
+  padding: 25px;
+  margin-bottom: 0;
+  border-radius: 0 0 4px 4px;
+
 }
 
 // Flop Calc
