--- a/styles/main.scss
+++ b/styles/main.scss
@@ -248,17 +248,17 @@
 }
 
 // newsletter-block style
+.newsletter-blog-single {
+  margin-top: 50px;
+}
+
 .newsletter-block {
   .input-group-text,
   .form-control {
     background-color: transparent;
+    //background-color: $dark;
     margin: 0 8px;
-  }
-  .form-control {
-    margin-right: 12px;
-    @include mobile {
-      margin: 0 12px 10px 0 !important;
-    }
+    color: $white;
   }
   .input-group-text {
     padding: 0 1.5rem;
@@ -277,6 +277,56 @@
       }
     }
   }
+
+
+  .message p {
+    background-color: transparent;
+    margin: 0 8px;
+    color: $white;
+
+    &.error {
+      color: red;
+    }
+
+    &.success {
+      color: green;
+    }  
+
+    &.shakeit
+    {
+      animation: shake 0.2s ease-in-out .1s 2;
+      -webkit-animation: shake 0.2s ease-in-out .1s 2;
+    }
+
+}
+
+.hand div
+  {
+    &.shakeValidation {
+    animation: shake 0.2s ease-in-out .1s 2;
+    -webkit-animation: shake 0.2s ease-in-out .1s 2;
+  }
+}
+
+
+@keyframes shake {
+  0% {
+    -webkit-transform: translate(4px, 0);
+    transform: translate(4px, 0);
+  }
+  50% {
+    -webkit-transform: translate(-4px, 0);
+    transform: translate(-4px, 0);
+  }
+  100% {
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+}
+
+
+
+
   ::-webkit-input-placeholder {
     color: rgba($white, .7);
   }
@@ -296,7 +346,6 @@
     }
   }
 }
-
 
 
 table {
